force-app/main/default/objects/LineItemsSync__c/LineItemsSync__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To sync custom fields from Quote Line Item To Opportunity products and Pricing Contract Entry</description>
    <label>LineItemsSync</label>
</CustomObject>