force-app/main/default/objects/LineItemsSync__c/fields/Opportunity_Product_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product_API_Name__c</fullName>
    <label>Opportunity Product API Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>