force-app/main/default/objects/LineItemsSync__c/fields/Pricing_Contract_Entry_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Contract_Entry_API_Name__c</fullName>
    <label>Pricing Contract Entry API Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>