force-app/main/default/objects/LineItemsSync__c/fields/Quote_Line_Item_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item_API_Name__c</fullName>
    <label>Quote Line Item API Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>